--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
                         <h3>Join the waitlist</h3>
                         <p>Tell us your gateway + SIEM. We’ll prioritize integrations based on real demand.</p>
 
-                        <form class="form" id="waitlistForm" action="https://formsubmit.co/orbitmeshio@gmail.com"
+                        <form class="form" id="waitlistForm" action="https://formsubmit.co/47039e5d05cb162028921b50dc8f8380"
                             method="POST">
                             <input type="hidden" name="_subject" value="OrbitMesh waitlist" />
                             <input type="hidden" name="_captcha" value="false" />
