Use the POST form

--- a/index.html
+++ b/index.html
@@ -683,8 +683,8 @@
                         <h3>Join the waitlist</h3>
                         <p>Tell us your gateway + SIEM. We’ll prioritize integrations based on real demand.</p>
 
-                        <form class="form" id="waitlistForm" action="https://formsubmit.co/47039e5d05cb162028921b50dc8f8380"
-                            method="POST">
+                        <form class="form" id="waitlistForm"
+                            action="https://formsubmit.co/47039e5d05cb162028921b50dc8f8380" method="POST">
                             <input type="hidden" name="_subject" value="OrbitMesh waitlist" />
                             <input type="hidden" name="_captcha" value="false" />
                             <input type="hidden" name="_next" value="https://formsubmit.co/thank-you" />
