Temporary removal of next action

--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
                             action="https://formsubmit.co/47039e5d05cb162028921b50dc8f8380" method="POST">
                             <input type="hidden" name="_subject" value="OrbitMesh waitlist" />
                             <input type="hidden" name="_captcha" value="false" />
-                            <input type="hidden" name="_next" value="https://formsubmit.co/thank-you" />
+                            <!-- <input type="hidden" name="_next" value="https://formsubmit.co/thank-you" /> -->
                             <div style="display:none;">
                                 <label>Comments
                                     <input name="comments" type="text" tabindex="-1" autocomplete="off" />
