Change the title for install

--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
         <div class="wrap nav-inner">
             <a class="brand" href="#top" aria-label="OrbitMesh">
                 <!-- Keep using your attached logo file name -->
-                <img src="orbitmesh-logo.jpeg" alt="OrbitMesh logo" />
+                <img src="orbitmesh-logo.png" alt="OrbitMesh logo" />
                 <div>
                     <strong>OrbitMesh</strong>
                     <span>Gateway continuous enforcement evidence</span>
@@ -651,7 +651,7 @@
                         </div>
 
                         <div class="pill">
-                            <span class="icon">🎯</span>
+                            <span class="icon">🔍</span>
 
                             <div>
                                 <b>API Truthfulness</b>
@@ -664,7 +664,7 @@
                             <span class="icon">📦</span>
 
                             <div>
-                                <b>API Truthfulness</b>
+                                <b>Easy Install</b>
                                 <small>Deploy bank-grade forensics in minutes, that never blocks your datapath.</small>
                             </div>
                         </div>
