Change the main title

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
         h1 {
             margin: 10px 0 12px;
-            font-size: 46px;
+            font-size: 26px;
             line-height: 1.05;
             letter-spacing: -1px;
         }
@@ -706,7 +706,8 @@
                     <div class="kicker">monitor-only • cryptographically signed evidence • siem-ready
                     </div>
 
-                    <h1>Stop guessing. Start attesting.</h1>
+                    <h1>DORA-Ready Evidence for your API Gateways. </h1>
+                    <h3>Turn your Gateway into an Immutable Audit Machine.</h3>
 
                     <p class="sub">
                         OrbitMesh captures <b>audit-grade evidence</b> of what your API gateway actually enforced
